--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-#to install all this requirements
-#`pip install -r requirements.txt`
 numpy>=1.18.5
 scipy>=1.4.1
 chumpy>=0.69
@@ -11,5 +9,9 @@ torch==1.6.0   # for compatible with pytorch3d
 torchvision==0.7.0
 face-alignment
 kornia==0.4.0
-yacs
-ninja
+yacs==0.1.8
+ninja==1.11.1.1
+matplotlib==3.9.1
+pillow==11.0.0
+requests==2.7.0
+gdown==5.2.0
